# unix-oidc

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile.build  LICENSE  MAINTAINERS.md  Makefile  NOTICE  README.md  SECURITY.md  codecov.yml  deny.toml  docker-compose.ciba-integration.yaml  docker-compose.e2e.yaml  docker-compose.scim-test.yaml  docker-compose.spire-test.yaml  docker-compose.test-multiarch.yaml  docker-compose.test.yaml  docker-compose.token-exchange.yaml  docker-compose.tpm-test.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  testing_report.yml
.github/workflows/: aws-platform-tests.yml  build-arm64-ami.yml  ci.yml  fleet-test.yml  fuzz.yml  integration-arm64-aws.yml  integration-docker.yml  integration-multiarch.yml  kubectl-e2e.yml  mac-policy.yml  platform-tests.yml  provider-tests.yml  publish-repo.yml  release.yml  security.yml  test-installer.yml  validate-docs.yml  verify-idp-templates.yml
.planning/: HANDOFF.json  MILESTONES.md  NEXT-SESSION-PLAN.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v2.1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v2.2-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
contrib/launchd/: com.prmana.agent.plist.template  com.unix-oidc.agent.plist.template
contrib/systemd/: prmana-agent.service  prmana-agent.socket  prmana-scim.service  prmana.tmpfiles.conf  unix-oidc-agent.service  unix-oidc-agent.socket  unix-oidc.tmpfiles.conf
demo/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  record-demo.sh  run-demo.sh
demo/tests/: token-exchange-demo.spec.ts  training-video.spec.ts
deploy/: README.md
deploy/ansible/: site.yml
deploy/installer/: demo.sh  (+3 more)
docs/: THREAT_MODEL.md  access-posture-evidence.md  adversarial-review.md  break-glass-validation.md  community-testing-guide.md  demo-guide.md  demo-output.html  demo-videos.html  deployment-patterns.md  dns-failover-guide.md  entra-e2e-setup.md  entra-setup-guide.md  extensibility-guide.md  fips-crypto-inventory.md  gdpr-erasure-guide.md  hardware-key-setup.md  identity-rationalization-guide.md  installation.md  integration-testing-assessment.md  jti-cache-architecture.md  keycloak-dpop-reference.md  kubectl-setup.md  log-retention.md  migration-guide.md  observability.md  oidc-oauth-deep-dive.md  pam-integration.md  pdf-style.tex  release-verification.md  rollout-checklist.md  security-audit-2026-04.md  security-guide.md  security-roadmap.md  security-testing-roadmap.md  standards-compliance-matrix.md  storage-architecture.md  sudo-step-up.md  testing.md  threat-model.md  user-guide-integrations.md  (+1 more)
dpop-cross-language-tests/: .gitignore  README.md  run-cross-language-tests.sh
examples/: policy.yaml  scim.yaml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: dpop_proof.rs  policy_parser.rs  token_parser.rs  username_mapper.rs
go-oauth-dpop/: .gitignore  README.md  dpop.go  dpop_test.go  go.mod
java-oauth-dpop/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
packaging/: README.md
pam-prmana/: Cargo.toml
pam-unix-oidc/: Cargo.toml
pam-unix-oidc/src/: audit.rs  auth.rs  evidence.rs  lib.rs  otp.rs  sudo.rs
pam-unix-oidc/src/approval/: provider.rs  webhook.rs
pam-unix-oidc/src/ciba/: client.rs  mod.rs  types.rs
pam-unix-oidc/src/device_flow/: client.rs  types.rs
pam-unix-oidc/src/identity/: collision.rs  mapper.rs  mod.rs
pam-unix-oidc/src/oidc/: attestation.rs  dpop.rs  introspection.rs  jwks.rs  mod.rs  token.rs  validation.rs
pam-unix-oidc/src/policy/: config.rs  mod.rs  rules.rs
pam-unix-oidc/src/security/: fs_store.rs  jti_cache.rs  mod.rs  nonce_cache.rs  rate_limit.rs  session.rs
pam-unix-oidc/src/session/: mod.rs
pam-unix-oidc/src/sssd/: groups.rs  mod.rs  user.rs
pam-unix-oidc/src/ui/: mod.rs  terminal.rs
pam-unix-oidc/tests/: adversarial_pentest.rs  attestation.rs  break_glass_integration.rs  entra_integration.rs  multi_idp_integration.rs  token_exchange.rs
prmana-agent/: Cargo.toml  README.md
prmana-kubectl/: Cargo.toml
prmana-kubectl/src/: commands.rs  exec_credential.rs  ipc_client.rs  kubeconfig.rs  main.rs  protocol.rs  socket_path.rs
prmana-kubectl/tests/: integration.rs
prmana-scim/: Cargo.toml
python-oauth-dpop/: .gitignore  README.md  pyproject.toml
python-oauth-dpop/oauth_dpop/: __init__.py  client.py  server.py  thumbprint.py
python-oauth-dpop/tests/: test_dpop.py
rust-oauth-dpop/: Cargo.toml  README.md
rust-oauth-dpop/src/: client.rs  error.rs  jwk.rs  lib.rs  server.rs  thumbprint.rs
scripts/: prmana_sync.sh  ssh-key-inventory.sh  validate-break-glass.sh
test/infra/idp-proxy/: Cargo.toml  README.md
test/infra/idp-proxy/src/: control.rs  fault.rs  lib.rs  main.rs  proxy.rs
test/infra/idp-proxy/tests/: fault_modes.rs
unix-oidc-agent/: Cargo.toml  README.md
unix-oidc-agent/src/: askpass.rs  auth_code.rs  config.rs  exchange.rs  failover.rs  lib.rs  main.rs  metrics.rs  sanitize.rs  security.rs
unix-oidc-agent/src/crypto/: attestation_pop.rs  dpop.rs  mod.rs  pqc_signer.rs  protected_key.rs  signer.rs  spire_signer.rs  thumbprint.rs  tpm_signer.rs  yubikey_signer.rs
unix-oidc-agent/src/daemon/: mod.rs  peer_cred.rs  presence_cache.rs  protocol.rs  socket.rs  sweep.rs
unix-oidc-agent/src/hardware/: mod.rs  pin_cache.rs
unix-oidc-agent/src/spire/: workload_api.rs
unix-oidc-agent/src/storage/: file_store.rs  keyring_store.rs  mod.rs  router.rs  secure_delete.rs
unix-oidc-agent/tests/: daemon_lifecycle.rs  failover_integration.rs  headless_storage.rs  jti_cross_fork.rs  pqc_integration.rs  spire_integration.rs  step_up_ipc.rs
unix-oidc-scim/: Cargo.toml
unix-oidc-scim/src/: auth.rs  config.rs  lib.rs  main.rs  provisioner.rs  routes.rs  schema.rs
(+538 files in other folders)
