# Cargo.toml
[workspace]
members = [
    "pam-unix-oidc",
    "unix-oidc-agent",
    "examples/webhook-server",
]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "CC-BY-NC-SA-4.0"
repository = "https://github.com/prodnull/unix-oidc"
homepage = "https://github.com/prodnull/unix-oidc"
documentation = "https://github.com/prodnull/unix-oidc/tree/main/docs"
keywords = ["oidc", "pam", "ssh", "authentication", "dpop"]
categories = ["authentication", "command-line-utilities"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
thiserror = "2.0"
anyhow = "1.0"
