[package]
name = "pam-unix-oidc"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
# cdylib: shared library (.so) loaded by PAM.
# rlib: standard Rust library linkable by other workspace crates (e.g. unix-oidc-agent
#        imports CIBA types and OidcDiscovery for step-up flow).
crate-type = ["cdylib", "rlib"]

[features]
default = []
# WARNING: test-mode skips JWT signature verification.
# NEVER enable this feature in production builds.
# Use only for integration testing with mock IdPs.
test-mode = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
libc = "0.2"
pamsm = { version = "0.5", features = ["libpam"] }
jsonwebtoken = "10.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.21"
moka = { version = "0.12", features = ["sync"] }
base64 = "0.22"
uzers = "0.12"
syslog = "7.0"
figment = { version = "0.10", features = ["yaml", "env"] }
gethostname = "1.1"
getrandom = "0.4"
parking_lot = "0.12"
p256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.11"
subtle = "2.5"
uuid = { version = "1", features = ["v4"] }
regex = "1.10"

[dev-dependencies]
tempfile = "3.27"
serde_yaml = "0.9"
