[package]
name = "pam-unix-oidc"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
# cdylib: shared library (.so) loaded by PAM.
# rlib: standard Rust library linkable by other workspace crates (e.g. unix-oidc-agent
#        imports CIBA types and OidcDiscovery for step-up flow).
crate-type = ["cdylib", "rlib"]

[features]
default = []
# WARNING: test-mode skips JWT signature verification.
# NEVER enable this feature in production builds.
# Use only for integration testing with mock IdPs.
test-mode = []
# Experimental hybrid PQC DPoP verification: ML-DSA-65+ES256 composite signatures.
pqc = ["dep:ml-dsa"]

[[bin]]
name = "unix-oidc-audit-verify"
path = "src/bin/audit_verify.rs"

[[bin]]
name = "unix-oidc-evidence-export"
path = "src/bin/evidence_export.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
clap = { version = "4", features = ["derive"] }
libc = "0.2"
pamsm = { version = "0.5", features = ["libpam"] }
jsonwebtoken = "10.3"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
moka = { version = "0.12", features = ["sync"] }
base64 = "0.21"
uzers = "0.12"
syslog = "6.1"
figment = { version = "0.10", features = ["yaml", "env"] }
gethostname = "0.4"
getrandom = "0.3"
parking_lot = "0.12"
p256 = { version = "0.13", features = ["ecdsa"] }
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
# Base32 decoding for TOTP seeds (RFC 6238 / YubiKey OTP enrollment)
data-encoding = "2.6"
hex = "0.4"
subtle = "2.5"
uuid = { version = "1", features = ["v4"] }
regex = "1.10"
secrecy = "0.10"

[dependencies.ml-dsa]
version = "0.1.0-rc.7"
optional = true

[dev-dependencies]
tempfile = "3.0"
serde_yaml = "0.9"
