[package]
name = "prmana-kubectl"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kubernetes exec credential plugin for prmana — transparent SSO cluster access"

[[bin]]
name = "prmana-kubectl"
path = "src/main.rs"

[dependencies]
# Serialization — must match agent wire format exactly
serde = { workspace = true }
serde_json = "1.0"
serde_yaml = "0.9"

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "net", "macros", "io-util", "fs"] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Timestamp formatting for ExecCredential expirationTimestamp (RFC 3339)
chrono = { version = "0.4", features = ["serde"] }

# Home directory resolution for ~/.kube/config
dirs = "5"

# Base64 encoding for CA certificates
base64 = "0.21"

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging to stderr (stdout is reserved for ExecCredential JSON output)
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
serde_json = "1.0"
