[package]
name = "unix-oidc-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OIDC authentication agent with DPoP support"

[[bin]]
name = "unix-oidc-agent"
path = "src/main.rs"

[dependencies]
# Crypto
# Note: p256 0.13 does NOT have a `zeroize` feature flag — ZeroizeOnDrop is
# implemented unconditionally in ecdsa-0.16 for SigningKey<C>. The `ecdsa` and
# `jwk` features are all that is needed.
p256 = { version = "0.13", features = ["ecdsa", "jwk"] }
sha2 = "0.10"
base64 = "0.21"
# MEM-01/MEM-02: zeroize for Zeroizing<T> wrapper; ZeroizeOnDrop already implemented
# unconditionally by ecdsa-0.16's SigningKey. secrecy is added for Plan 02+ usage.
zeroize = { version = "1", features = ["derive"] }
secrecy = "0.10"
# MEM-04: libc for mlock/munlock syscalls (memory locking of key pages)
libc = "0.2"

# OIDC/JWT
jsonwebtoken = "9.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde.workspace = true
serde_json = "1.0"

# CLI
clap = { version = "4", features = ["derive"] }

# Storage
# Enable real keyring backends. Without features, keyring silently uses mock store.
# sync-secret-service: D-Bus/libsecret on Linux (requires libdbus-1-dev)
# linux-native: keyutils syscall backend (@u keyring, no daemon needed)
# apple-native: macOS Keychain Services
keyring = { version = "3", features = ["sync-secret-service", "linux-native", "apple-native"] }
directories = "5"

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
dirs = "5"
serde_yaml = "0.9"

[features]
# Hardware signer backends — optional; base build has no PKCS#11 or TPM deps.
# rpassword is shared by both backends for PIN prompting.
yubikey = ["dep:cryptoki", "dep:rpassword"]
# tpm feature is implemented in Plan 03-02; dep:tss-esapi will be added then.
tpm = ["dep:rpassword"]

[dependencies.cryptoki]
version = "0.7"
optional = true

[dependencies.rpassword]
version = "7"
optional = true

# tss-esapi is added in Plan 03-02; declared here as a placeholder.
# Uncomment when implementing the TPM backend.
# [dependencies.tss-esapi]
# version = "0.10"
# optional = true

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
