[package]
name = "unix-oidc-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OIDC authentication agent with DPoP support"

[[bin]]
name = "unix-oidc-agent"
path = "src/main.rs"

[dependencies]
# Crypto
# Note: p256 0.13 does NOT have a `zeroize` feature flag — ZeroizeOnDrop is
# implemented unconditionally in ecdsa-0.16 for SigningKey<C>. The `ecdsa` and
# `jwk` features are all that is needed.
p256 = { version = "0.13", features = ["ecdsa", "jwk"] }
sha2 = "0.10"
base64 = "0.21"
# MEM-01/MEM-02: zeroize for Zeroizing<T> wrapper; ZeroizeOnDrop already implemented
# unconditionally by ecdsa-0.16's SigningKey. secrecy is added for Plan 02+ usage.
zeroize = { version = "1", features = ["derive"] }
secrecy = "0.10"
# MEM-04: libc for mlock/munlock syscalls (memory locking of key pages)
libc = "0.2"

# OIDC/JWT
jsonwebtoken = "9.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde.workspace = true
serde_json = "1.0"

# CLI
clap = { version = "4", features = ["derive"] }

# Storage
# Enable real keyring backends. Without features, keyring silently uses mock store.
# sync-secret-service: D-Bus/libsecret on Linux (requires libdbus-1-dev)
# linux-native: keyutils syscall backend (@u keyring, no daemon needed)
# apple-native: macOS Keychain Services
keyring = { version = "3", features = ["sync-secret-service", "linux-native", "apple-native"] }
directories = "5"

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
dirs = "5"
serde_yaml = "0.9"
figment = { version = "0.10", features = ["yaml", "env"] }
parking_lot = "0.12"
# OPS-02: systemd socket activation — accepts pre-bound fds; validates LISTEN_PID match
# to prevent fd hijacking.  Source: https://docs.rs/listenfd/latest/listenfd/
listenfd = "1.0"
# OPS-04: sd-notify readiness / stopping signals. Pure-Rust implementation with no
# libsystemd FFI; silently no-ops when NOTIFY_SOCKET is absent (standalone mode).
# Source: https://docs.rs/sd-notify/0.5.0/sd_notify/
sd-notify = "0.5"

[features]
# Hardware signer backends — optional; base build has no PKCS#11 or TPM deps.
# rpassword is shared by both backends for PIN prompting.
yubikey = ["dep:cryptoki", "dep:rpassword"]
# tpm feature is implemented in Plan 03-02; dep:tss-esapi will be added then.
tpm = ["dep:tss-esapi", "dep:rpassword"]

[dependencies.cryptoki]
version = "0.7"
optional = true

[dependencies.rpassword]
version = "7"
optional = true

# tss-esapi-sys ships pre-built FFI bindings only for Linux (x86_64, aarch64).
# macOS requires `generate-bindings` with tpm2-tss C headers, which are not
# available via homebrew. The `--features tpm` feature compiles on both platforms
# but TpmSigner is only available on Linux (cfg(target_os = "linux")).
[target.'cfg(target_os = "linux")'.dependencies.tss-esapi]
version = "7.6"
optional = true

# CIBA step-up: import CIBA types (CibaClient, OidcDiscovery, ACR constants, error types)
# from the PAM crate. Requires pam-unix-oidc to expose rlib crate type.
[dependencies.pam-unix-oidc]
path = "../pam-unix-oidc"

# OPS-13: structured journal logging via sd-journal socket (Linux only).
# tracing-journald writes directly to the systemd journal socket; it is not
# available on macOS so it is gated to Linux targets.
[target.'cfg(target_os = "linux")'.dependencies.tracing-journald]
version = "0.3"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
tracing-test = "0.2"
