[package]
name = "unix-oidc-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OIDC authentication agent with DPoP support"

[[bin]]
name = "unix-oidc-agent"
path = "src/main.rs"

[[bin]]
name = "unix-oidc-jti-helper"
path = "src/bin/unix-oidc-jti-helper.rs"

[dependencies]
# Crypto
# Note: p256 0.13 does NOT have a `zeroize` feature flag — ZeroizeOnDrop is
# implemented unconditionally in ecdsa-0.16 for SigningKey<C>. The `ecdsa` and
# `jwk` features are all that is needed.
p256 = { version = "0.13", features = ["ecdsa", "jwk"] }
sha2 = "0.10"
base64 = "0.21"
# MEM-01/MEM-02: zeroize for Zeroizing<T> wrapper; ZeroizeOnDrop already implemented
# unconditionally by ecdsa-0.16's SigningKey. secrecy is added for Plan 02+ usage.
zeroize = { version = "1", features = ["derive"] }
secrecy = "0.10"
# MEM-04: libc for mlock/munlock syscalls (memory locking of key pages)
libc = "0.2"

# OIDC/JWT
jsonwebtoken = "10.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde.workspace = true
serde_json = "1.0"

# CLI
clap = { version = "4", features = ["derive"] }

# Storage
# Enable real keyring backends. Without features, keyring silently uses mock store.
# sync-secret-service: D-Bus/libsecret on Linux (requires libdbus-1-dev)
# linux-native: keyutils syscall backend (@u keyring, no daemon needed)
# apple-native: macOS Keychain Services
keyring = { version = "3", features = ["sync-secret-service", "linux-native", "apple-native"] }
directories = "5"

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
dirs = "5"
open = "5"
serde_yaml = "0.9"
figment = { version = "0.10", features = ["yaml", "env"] }
parking_lot = "0.12"
# OPS-02: systemd socket activation — accepts pre-bound fds; validates LISTEN_PID match
# to prevent fd hijacking.  Source: https://docs.rs/listenfd/latest/listenfd/
listenfd = "1.0"
# OPS-04: sd-notify readiness / stopping signals. Pure-Rust implementation with no
# libsystemd FFI; silently no-ops when NOTIFY_SOCKET is absent (standalone mode).
# Source: https://docs.rs/sd-notify/0.5.0/sd_notify/
sd-notify = "0.5"

[features]
# Hardware signer backends — optional; base build has no PKCS#11 or TPM deps.
# rpassword is shared by both backends for PIN prompting.
yubikey = ["dep:cryptoki", "dep:rpassword"]
# tpm feature is implemented in Plan 03-02; dep:tss-esapi will be added then.
tpm = ["dep:tss-esapi", "dep:rpassword"]
# Experimental hybrid PQC DPoP: ML-DSA-65+ES256 composite signatures
# per draft-ietf-jose-pq-composite-sigs-01. Pre-release, unaudited crate.
pqc = ["dep:ml-dsa", "pam-unix-oidc/pqc"]
# SPIFFE/SPIRE integration: fetch JWT-SVIDs via SPIRE Workload API (gRPC over UDS).
# ADR-017: tonic + official proto chosen over spiffe crate or hand-rolled protobuf.
spire = ["dep:tonic", "dep:prost", "dep:hyper-util", "dep:tower"]

# SPIRE Workload API client (gRPC over UDS). Only pulled in by --features spire.
# channel: gRPC client transport (includes hyper-util for UDS connector).
# prost: protobuf codec. codegen: not needed (stubs are checked in).
[dependencies.tonic]
version = "0.12"
optional = true
default-features = false
features = ["channel", "prost", "codegen"]

[dependencies.prost]
version = "0.13"
optional = true

# UDS transport for tonic (SPIRE Workload API socket).
[dependencies.hyper-util]
version = "0.1"
optional = true
features = ["tokio"]

[dependencies.tower]
version = "0.4"
optional = true

[dependencies.cryptoki]
version = "0.7"
optional = true

[dependencies.rpassword]
version = "7"
optional = true

[dependencies.ml-dsa]
version = "0.1.0-rc.7"
optional = true
features = ["zeroize"]

# tss-esapi-sys ships pre-built FFI bindings only for Linux (x86_64, aarch64).
# macOS requires `generate-bindings` with tpm2-tss C headers, which are not
# available via homebrew. The `--features tpm` feature compiles on both platforms
# but TpmSigner is only available on Linux (cfg(target_os = "linux")).
[target.'cfg(target_os = "linux")'.dependencies.tss-esapi]
version = "7.6"
optional = true

# CIBA step-up: import CIBA types (CibaClient, OidcDiscovery, ACR constants, error types)
# from the PAM crate. Requires pam-unix-oidc to expose rlib crate type.
[dependencies.pam-unix-oidc]
path = "../pam-unix-oidc"

# OPS-13: structured journal logging via sd-journal socket (Linux only).
# tracing-journald writes directly to the systemd journal socket; it is not
# available on macOS so it is gated to Linux targets.
[target.'cfg(target_os = "linux")'.dependencies.tracing-journald]
version = "0.3"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
# no-env-filter: allows tracing-test to capture events from all targets, including
# unix_oidc_audit (the structured SIEM audit target). Without this feature, tracing-test
# filters to the crate name only and misses cross-target audit events.
tracing-test = { version = "0.2", features = ["no-env-filter"] }
wiremock = "0.6"
