[workspace]

[package]
name = "idp-proxy"
version = "0.1.0"
edition = "2021"
description = "Programmable HTTP fault-injection proxy for CI IdP outage simulation"
publish = false

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full", "server", "server-auto", "http1", "http2", "tokio"] }
tower = "0.5"
reqwest = { version = "0.12", features = ["rustls-tls", "stream", "json"], default-features = false }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
humantime = "2"
anyhow = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
